@@ -25,8 +25,8 @@ public class CalendarSync {
   static Logger logger = Logger.getLogger (ZarafaCalendar.class);
   private static File propertiesFile = null;
   private static Properties properties;
-  private static Calendar sourceCalendar;
-  private static ZarafaCalendar targetCalendar;
+  private static Calendar calendar1;
+  private static Calendar calendar2;
 
   /**
    * @param args
@@ -65,14 +65,21 @@ public class CalendarSync {
   private static void parseOptions (String optionFiles) {
     logger.trace ("Entering parseOptions");
     properties = new Properties ();
+    FileInputStream propertiesStream = null;
     try {
-      FileInputStream propertiesStream = new FileInputStream (optionFiles);
+      propertiesStream = new FileInputStream (optionFiles);
       properties.load (propertiesStream);
-      propertiesStream.close ();
     } catch (IOException e) {
       logger.fatal ("Error in properties file");
       logger.info (e);
-      System.exit (1);
+      throw new RuntimeException ("Error in properties file");
+    } finally {
+      try {
+        if (null != propertiesStream ) propertiesStream.close();
+      } catch (IOException e) {
+        logger.fatal ("Error in properties file");
+        logger.info (e);
+      }
     }
     logger.trace("Exiting initialisation");
   }
@@ -84,15 +91,15 @@ public class CalendarSync {
     logger.trace ("Entering initialisation");
     
     String propertyValue = properties.getProperty ("lookForwardWindow", "90");
-    Integer lookForwardWindow = new Integer(propertyValue);
+    Integer lookForwardWindow = Integer.valueOf (propertyValue);
     propertyValue = properties.getProperty ("lookBackWindow", "90");
-    Integer lookBackWindow = new Integer(propertyValue);
+    Integer lookBackWindow = Integer.valueOf(propertyValue);
 
-    sourceCalendar = new JudaCalendar (lookForwardWindow, lookBackWindow, properties);
-    targetCalendar = new ZarafaCalendar (lookForwardWindow, lookBackWindow, properties);
+    calendar1 = new JudaCalendar (lookForwardWindow, lookBackWindow, properties);
+    calendar2 = new ZarafaCalendar (lookForwardWindow, lookBackWindow, properties);
     try {
-      sourceCalendar.open ();
-      targetCalendar.open ();
+      calendar1.open ();
+      calendar2.open ();
     } catch (CalendarException e) {
       logger.fatal ("Error opening calendars");
       logger.info (e);
@@ -108,16 +115,28 @@ public class CalendarSync {
   private static void synchronize () {
     logger.trace ("Entering synchronize");
     
-    CalendarItem targetItem, sourceItem = sourceCalendar.getFirst ();
+    CalendarItem targetItem, sourceItem = calendar1.getFirst ();
     
     while (null != sourceItem) {
       String sourceID = sourceItem.getID ();
-      targetItem = targetCalendar.getById (sourceID);
+      targetItem = calendar2.getById (sourceID);
       if (null == targetItem || sourceItem.isNewer (targetItem)) {
         logger.trace ("CalendarItem " + sourceItem.getID () + " added te other Calendar");
-        targetCalendar.modify (sourceItem);
+        calendar2.modify (sourceItem);
       }
-      sourceItem = sourceCalendar.getNext ();
+      sourceItem = calendar1.getNext ();
+    }
+    
+    sourceItem = calendar2.getFirst ();
+    
+    while (null != sourceItem) {
+      String sourceID = sourceItem.getID ();
+      targetItem = calendar1.getById (sourceID);
+      if (null == targetItem || sourceItem.isNewer (targetItem)) {
+        logger.trace ("CalendarItem " + sourceItem.getID () + " added te other Calendar");
+        calendar2.modify (sourceItem);
+      }
+      sourceItem = calendar2.getNext ();
     }
     
     logger.trace ("Exiting synchronize");
@@ -129,8 +148,8 @@ public class CalendarSync {
   private static void cleanUp () {
     logger.trace ("Start cleanUp");
     try {
-      sourceCalendar.close ();
-      targetCalendar.close ();
+      calendar1.close ();
+      calendar2.close ();
     } catch (CalendarException e) {
       logger.error ("Error Closing calendars. Synchronisation may be failed");
       logger.info (e);
